2014-06-17  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.12 ===

2014-06-10  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlstyle.c: (gst_ttml_style_gen_pango_markup):
	Revert back to absolute font sizes for ttmlparse ("large" and "small"),
	since relative ones ("larger" and "smaller") do not seem to work well
	with OPD, which adds additional Pango markup around them.
	As a result, subtitles which specify the font size cannot have their
	size changed from OPD's preferences menu (but at least they are shown.

2014-06-05  Xavi Artigas  <xartigas@fluendo.com>

	* testsuite/ttmlrender-play-1.0.sh:
	* testsuite/ttmlrender-play-0.10.sh:
	* testsuite/ttmlrender-play.sh:
	Test play script for 1.0

2014-06-05  Xavi Artigas  <xartigas@fluendo.com>

	* gst-fluendo-ttml.spec.in:
	Add dependencies to spec file.

2014-06-04  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.11 ===

2014-05-27  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlbase.c: (gst_ttmlbase_downstream_negotiation):
	* testsuite/cpcdemo-0.10.bat:
	* testsuite/cpcdemo-1.0.bat:
	* testsuite/cpcdemo_smptett.xml:
	Debug output and a new test file (plus the not-at-all-obvious pipeline
	required to play it).

2014-05-22  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_normalize_length):
	Fix corner case crash for RELATIVE padding without extent attribute.

2014-05-22  Xavi Artigas  <xartigas@fluendo.com>

	* testsuite/ttml-play.bat:
	* testsuite/ttmlrender-play.bat:
	* testsuite/ttmlparse-play.bat:
	Test scripts for ttmlparse and ttmlrender. (on Windows).

2014-05-22  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_store_layout),
	(gst_ttmlrender_new_region), (gst_ttmlrender_get_property),
	(gst_ttmlrender_set_property), (gst_ttmlrender_class_init):
	* src/gstttmlrender.h:
	* src/gstttmlutils.c: (gst_ttml_text_align_spec_get_type),